[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/levels/Fantasy Swamp Forest/Terrain_and_Props.png" type="Texture" id=1]
[ext_resource path="res://assets/levels/Fantasy Swamp Forest/BG_3/BG_3.png" type="Texture" id=2]
[ext_resource path="res://assets/levels/Fantasy Swamp Forest/BG_2/BG_2.png" type="Texture" id=3]
[ext_resource path="res://assets/levels/Fantasy Swamp Forest/BG_1/BG_1.png" type="Texture" id=4]
[ext_resource path="res://scenes/core/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/core/Guardian.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/objects/StartPoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/objects/EndPoint.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/objects/Checkpoint.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/levels/Level0.gd" type="Script" id=11]

[sub_resource type="TileSet" id=1]
0/name = "Terrain_and_Props.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 364, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88, 12 )

[node name="Level0" type="Node2D"]
pause_mode = 1
script = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.1 )
motion_mirroring = Vector2( 1817, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 3 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.2 )
motion_mirroring = Vector2( 1929, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1

[node name="FixedBack" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="FixedBack"]
position = Vector2( 544, 114.973 )

[node name="Polygon2D" type="Polygon2D" parent="FixedBack/StaticBody2D"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -363.395, -10.973, 364.605, -10.973, 364.605, 13.027, -363.395, 13.027 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FixedBack/StaticBody2D"]
position = Vector2( 0.60498, 1.02699 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="FixedBack"]
position = Vector2( 668.605, 40 )

[node name="Polygon2D" type="Polygon2D" parent="FixedBack/StaticBody2D2"]
position = Vector2( 56, 1.52588e-05 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -64, -8, 112, -8, 112, 16, -64, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FixedBack/StaticBody2D2"]
position = Vector2( 80, 4.00002 )
shape = SubResource( 3 )

[node name="Checkpoint" parent="FixedBack" instance=ExtResource( 10 )]
position = Vector2( 602, 94 )

[node name="StartPoint" parent="FixedBack" instance=ExtResource( 8 )]
position = Vector2( 267, 94 )

[node name="EndPoint" parent="FixedBack" instance=ExtResource( 9 )]
position = Vector2( 878, 94 )

[node name="Dynamic" type="Node2D" parent="."]

[node name="Player" parent="Dynamic" instance=ExtResource( 5 )]
position = Vector2( 267, 84 )

[node name="Camera2D" type="Camera2D" parent="Dynamic/Player"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Guardian" parent="Dynamic" instance=ExtResource( 7 )]
player_node = NodePath("../Player")

[node name="FixedFront" type="Node2D" parent="."]
